--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,41 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+asyncpg==0.30.0
+attrs==25.3.0
+blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.2
+click==8.3.1
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+Flask==3.1.2
+fonttools==4.60.1
+frozenlist==1.7.0
 greenlet==3.2.3
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+multidict==6.6.3
 numpy==2.3.2
+packaging==25.0
 pandas==2.3.1
+pillow==12.0.0
+propcache==0.3.2
 psycopg2-binary==2.9.10
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.4
 six==1.17.0
 SQLAlchemy==2.0.42
+tqdm==4.67.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+Werkzeug==3.1.3
+yarl==1.20.1
