--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
-# In docker-compose.yml
 services:
   db:
     image: postgres:14-alpine
     restart: always
     environment:
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
-      - POSTGRES_DB=hacker_news
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     command: postgres -c 'synchronous_commit=off'
 
 volumes:
-
   postgres_data:
