--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,40 @@ aiohttp==3.13.3
 aiosignal==1.4.0
 asyncpg==0.31.0
 attrs==25.4.0
+blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
 dotenv==0.9.9
+Flask==3.1.2
+fonttools==4.61.1
 frozenlist==1.8.0
+greenlet==3.3.0
 idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.8
 multidict==6.7.0
+numpy==2.4.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.1.0
 propcache==0.4.1
 psycopg2==2.9.11
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
+requests==2.32.5
+six==1.17.0
+SQLAlchemy==2.0.45
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+Werkzeug==3.1.5
 yarl==1.22.0
