--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: ./Analysis/time_series/Dockerfile
+      dockerfile: ./Analysis/time_series/time_series.Dockerfile
     ports:
       - "5000:5000"
     depends_on:
@@ -22,7 +22,7 @@ services:
   scraper:
     build:
       context: .
-      dockerfile: ./Scraper/Dockerfile
+      dockerfile: ./Scraper/Scraper.Dockerfile
     depends_on:
       - db
     networks:
