--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ packaging==25.0
 pandas==2.3.3
 pillow==12.1.0
 propcache==0.4.1
-psycopg2==2.9.11
+psycopg2-binary==2.9.11
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
