port forwarding from virtual bridge

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,8 @@ services:
   db:
     volumes:
       - hacker-news-analytics_postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
 volumes:
   hacker-news-analytics_postgres_data:
