--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       dockerfile: ./Analysis/time_series/time_series.Dockerfile
     ports:
       - "5000:5000"
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=db 
+      - POSTGRES_PORT=5432
     depends_on:
       - db
     networks:
